# heatfence

./: .env  main.py  pyproject.toml
misc/: thinkpad.conf
tempbell/: __init__.py  __main__.py  action.py  config.py  main.py  model.py  reader.py
tempbell/reader/: __init__.py  abc.py  sensor.py  thinkpad.py
